# galadriel

./: .gitignore  .gitmodules  DEV_README.md  README.md  README_PLATFORM.md  cli.py  docker-compose.yml  main.py  my_agent.py  pyproject.toml  setup.cfg  template.agents.env  template.env  template_agent.env  toolbox.sh
.github/workflows/: black.yml  lint_mypy_pylint.yml  ruff.yml  type_check.yml  unit_test.yml
agent_configuration/: example_elon_musk.json
agents/: models.py  utils.py
agents/clients/: database.py  perplexity.py  s3.py  twitter.py
agents/prompts/: format_prompt.py
docker/: Dockerfile
examples/basic/: README.md  agent.py
examples/basic-web3/: README.md  agent.py
examples/basic_twitter/: agent.py
examples/basic_weather_agent/: agent.py  main.py  requirements.txt
examples/basic_web3/: agent.py
examples/deterministic/: README.md  agent.py  template.env
examples/discord/: README.md  agent.py  character_agent.py  discord_agent.py  elon_musk.py  main.py  requirements.txt  template.env  tools.py
examples/intent-router/: README.md  agent.py
examples/multi-agents/: README.md  agent.py
examples/open-deep-research/: README.md  agent.py  requirements.txt
examples/open-deep-research/scripts/: text_web_browser.py  visual_qa.py
examples/payments/: README.md  agent.py  template.env
examples/task_agent/: README.md  agent.json  agent.py  character.json  entities.py  main.py  requirements.txt  research_agent.py
examples/task_agent/clients/: twitter_mention_client.py
examples/task_agent/tools/: coin_price_tool.py  dex_screener_tool.py  solana_tool.py
examples/tasks/: agent.py  research_agent.py
examples/telegram/: README.md  agent.py  character_agent.py  elon_musk.py  main.py  prompts.py  requirements.txt  telegram_agent.py  template.env  tools.py
examples/trading/: .agents.env  README.md  agent.py  main.py  requirements.txt  template.env  testing.py  trading_agent.py
examples/trading-agent/: main.py  trading_agent.py  trading_client.py
examples/trading-agent/clients/: cron.py
examples/trading-chat/: agent.py  intent_router.py
examples/trading-human-loop/: .gitignore  agent.py  intent_routing_agent.py  pyproject.toml  research_agent.py  template.agents.env  trading_agent.py
examples/trading/repositories/: solana_repository.py
examples/trading/tools/: markets.py  onchain.py  price_feed.py
examples/trading_with_memories/: agent.py
examples/twitter/: README.md  agent.py  character_agent.py  main.py  manual_tweet.py  template.env  testing.py  tweet_from_output.py  tweet_from_tool.py
examples/twitter/src/: models.py  twitter_client.py
examples/twitter/src/agent/: twitter_agent.py  twitter_post_agent.py  twitter_reply_agent.py
examples/web3-tools-test/: agent.py
galadriel/: __init__.py  agent.py  cli.py  core_agent.py  entities.py  errors.py  logging_utils.py
galadriel/clients/: __init__.py  chatui_client.py  cron.py  discord_client.py  gradio_client.py  shutdown_after.py  simple_message_client.py  telegram_client.py  terminal_client.py  test_client.py  twitter_mention_client.py  twitter_post_client.py
galadriel/connectors/: llm.py  perplexity.py  twitter.py
galadriel/domain/: extract_step_logs.py  generate_proof.py  logs_exporter.py  publish_proof.py  validate_solana_payment.py
galadriel/domain/agent_state/: download_agent_state.py  export_agent_state.py  restore_agent_state.py  upload_agent_state.py
galadriel/domain/prompts/: format_prompt.py
galadriel/keystore/: wallet_manager.py
galadriel/memory/: memory_repository.py  memory_store.py
galadriel/proof/: prover.py
galadriel/repository/: agent_state_repository.py  s3_repository.py  wallet_repository.py
galadriel/state/: agent_state_repository.py
galadriel/tools/: composio_converter.py  retriever.py  twitter.py
galadriel/tools/web3/: coingecko.py  dexscreener.py  jupiter.py  market_data_devnet.py  raydium.py  raydium_cpmm.py  raydium_openbook.py  solana.py  solana_tools.py  wallet_tool.py
galadriel/utils/jupiter/: jupiter_swap.py
galadriel/utils/raydium/: constants.py  cpmm.py  layouts.py  openbook.py  utils.py
galadriel/wallets/: solana_wallet.py  wallet_base.py
galadriel_agent/: agent.py  cli.py  core_agent.py  discord_agent.py  docker-compose.yml  entities.py  logging_utils.py  models.py  twitter_post_agent.py  utils.py
galadriel_agent/clients/: client.py  cron.py  database.py  discord_bot.py  discord_client.py  galadriel.py  memory_repository.py  s3.py  telegram_bot.py  telegram_client.py  test_client.py  twitter.py
galadriel_agent/clients/llms/: galadriel.py
galadriel_agent/connectors/: perplexity.py  twitter.py
galadriel_agent/docker/: Dockerfile
galadriel_agent/docker/galadriel_base_image/: Dockerfile  run.sh  setup_forwarding.sh
galadriel_agent/domain/: add_conversation_history.py  extract_transaction_signature.py  generate_proof.py  logs_exporter.py  publish_proof.py  validate_solana_payment.py
galadriel_agent/examples/discord/: discord_agent.py  main.py  prompts.py  tools.py
galadriel_agent/examples/trading-agent/: main.py
galadriel_agent/plugins/twitter/: twitter_agent.py  twitter_client.py  twitter_post_agent.py  twitter_post_runner.py  twitter_reply_agent.py  twitter_reply_client.py  twitter_reply_runner.py
galadriel_agent/prompts/: format_prompt.py  get_default_prompt_state_use_case.py  get_search_query.py  prompts.py
galadriel_agent/responses/: format_response.py
galadriel_agent/tools/: composio_converter.py  retriever.py  twitter.py
scripts/: publish.sh
tests/unit/: test_agent.py
tests/unit/domain/: test_add_conversation_history.py  test_extract_step_logs.py  test_generate_proof.py  test_logs_exporter.py  test_publish_proof.py  test_validate_solana_payment.py
tests/unit/memory/: test_memory_repository.py  test_memory_store.py
tests/unit/prompts/: test_format_prompt.py  test_get_search_query.py
tests/unit/proof/: test_prover.py
tests/unit/repository/: test_agent_state_repository.py
tests/unit/responses/: test_format_response.py
tests/unit/state/: test_agent_state_repository.py
(+41 files in other folders)
